--- a/views/ranking.html
+++ b/views/ranking.html
@@ -1,10 +1,162 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<!-- Navigation -->
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#/main">
+                <img src="img/USLogoTransparent.png" class="pull-left logo">
+                <img src="img/USNameTransparent.png" class="pull-left logoname hidden-xs">
+            </a>
 
-</body>
-</html>
+            <div class="filterButton pull-right">
+                <button class="btn-primary btn-filter glyphicon glyphicon-filter" data-toggle="modal"
+                        data-target=".bs-example-modal-lg"></button>
+            </div>
+        </div>
+
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a href="#/main">Cuadro de Mando</a>
+                </li>
+                <li class="active">
+                    <a href="#/ranking">Ranking</a>
+                </li>
+                <li>
+                    <a href="#/login">Logout</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+</nav>
+
+<!--Modal Filter-->
+<div id="modalFilter" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog"
+     aria-labelledby="myLargeModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span
+                        aria-hidden="true">&times;</span><span class="sr-only">Cerrar</span></button>
+                <h4 class="modal-title" id="myModalLabel">Filtro</h4>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+
+                    <div class="form-group col-sm-4">
+                        <label for="ccmonth">Canal</label>
+                        <select class="form-control" id="ccmonth" ng-model="selectedChannel" ng-change="applyFilter()"
+                                ng-options="item for item in channels">
+                        </select>
+                    </div>
+
+                    <div class="form-group col-sm-4">
+                        <label for="ccyear">Geografía</label>
+                        <select class="form-control" id="ccyear" ng-model="selectedGeography" ng-change="applyFilter()"
+                                ng-options="item for item in geography">
+                        </select>
+                    </div>
+
+                    <div class="form-group col-sm-4">
+                        <label for="ccyear">Marca</label>
+                        <select class="form-control" id="ccyear" ng-model="selectedBrand" ng-change="highlightBrand()"
+                                ng-options="item for item in brands">
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <!--<button type="button" class="btn btn-default" data-dismiss="modal" ng-click="applyFilter()">Apply</button>-->
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Page Content -->
+<div class="container">
+
+    <div class="table-responsive">
+        <table class="table table-condensed RankingTable">
+            <thead>
+            <tr>
+                <th class="RankingTh">#</th>
+                <th class="RankingTh">Marca</th>
+                <th class="RankingTh">
+                    <table>
+                        <tr>
+                            <td class="HeaderTitle">Día</td>
+                        </tr>
+                        <tr>
+                            <td class="HeaderTitle2">Mes</td>
+                        </tr>
+                    </table>
+                </th>
+                <th class="RankingTh">
+                    <table>
+                        <tr>
+                            <td class="HeaderTitle">MSDía</td>
+                        </tr>
+                        <tr>
+                            <td class="HeaderTitle2">MSMes</td>
+                        </tr>
+                    </table>
+                </th>
+                <!--<th class="hidden-340">Mes</th>
+                <th class="hidden-340">MSMes</th>-->
+            </tr>
+            </thead>
+            <tbody>
+            <tr class="RankingTr" ng-repeat="dataBrand in BrandsData" ng-class="highlightBrand(dataBrand.B)">
+                <td>{{dataBrand.R}}</td>
+                <td>{{dataBrand.B}}</td>
+                <td>
+                    <table>
+                        <tr>
+                            <td>{{dataBrand.K31}}</td>
+                        </tr>
+                        <tr>
+                            <td>{{dataBrand.K34 | number:2}}%</td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table>
+                        <tr>
+                            <td>{{dataBrand.K41}}</td>
+                        </tr>
+                        <tr>
+                            <td>{{dataBrand.K44 | number:2}}%</td>
+                        </tr>
+                    </table>
+                </td>
+                <!--                <td class="hidden-340">999</td>
+                                <td class="hidden-340">+/- 99%</td>-->
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <hr class="hrNoMargin">
+    <!-- Footer -->
+    <footer>
+        <div class="row">
+            <div class="col-lg-12">
+                <p>Copyright &copy; Urban Science 2014</p>
+            </div>
+        </div>
+        <!-- /.row -->
+    </footer>
+
+</div>
