--- a/partials/tpl/login.tpl.html
+++ b/partials/tpl/login.tpl.html
@@ -1,19 +1,4 @@
-<!--<div class="">
-    <form role="form" name="form1">
-        <div class="form-group">
-            <p>Welcome: {{user.mail}}</p>
-            <label for="exampleInputEmail1">Mail</label>
-            <input type="text" placeholder="Enter name" class="form-control" required ng-model="user.mail">
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" placeholder="Password" id="exampleInputPassword1" class="form-control" required ng-model="user.password">
-        </div>
-        <button class="btn btn-default" type="submit" ng-disabled="form1.$invalid" ng-click="login(user)">Submit</button>
-        <p>{{msgtxt}}</p>
-    </form>
-</div>-->
-
+<!--
 <div class="loginBox center-block">
     <div>
         <img src="img/USLogoTransparent.png" class="logoLogin">
@@ -29,10 +14,40 @@
                 <input type="password" class="form-control" placeholder="password" required ng-model="credentials.password">
             </div>
             <br />
-            <!--<button class="btn btn-default full-width" ng-disabled="form1.$invalid" ng-click="doLogin()">login</span></button>-->
-            <!--<button class="btn btn-default full-width" ng-disabled="form1.$invalid" ng-click="login(user)">login</span></button>-->
             <button class="btn btn-default full-width" ng-disabled="form1.$invalid" ng-click="login(credentials)">login</button>
             <p>{{msgtxt}}</p>
+        </div>
+    </div>
+</div>
+-->
+
+<div>
+    <header id="logoContainer">
+        <div id="mfLogo">
+            <img class="center-block logoLogin" src="img/USLogoTransparent.png"/><br/>
+            <img class="center-block nameLogin" src="img/USNameTransparent.png">
+        </div>
+    </header>
+    <div class="row">
+        <div id="urbanLogo" class="row">
+            <img id="companyLogo" class="center-block" src="img/urbanLogo.png" width="120px" height="23px"/>
+        </div>
+    </div>
+    <div id="body" class="row">
+        <div class="col-sm-offset-4 col-sm-4 col-xs-12">
+            <br/>
+            <div class="form-group input-group col-xs-10 col-xs-offset-1">
+                <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
+                <input type="text" class="form-control" placeholder="username" required ng-model="credentials.username">
+            </div>
+            <div class="form-group input-group col-xs-10 col-xs-offset-1">
+                <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+                <input type="password" class="form-control" placeholder="password" required ng-model="credentials.password">
+            </div>
+            <div class="form-group col-xs-10 col-xs-offset-1">
+                <button id="btnLogin" class="btn btn-default full-width" ng-disabled="form1.$invalid" ng-click="login(credentials)">login</button>
+                <p>{{msgtxt}}</p>
+            </div>
         </div>
     </div>
 </div>
