--- a/views/main.html
+++ b/views/main.html
@@ -5,7 +5,7 @@
 </script>
 
 <!-- Navigation -->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -133,7 +133,7 @@
 <div class="container">
 
     <!-- Page Header -->
-    <div class="row">
+    <div class="row nopadding">
         <div class="col-lg-12">
             <h1>{{selectedGeography}}
                 <small>{{selectedChannel}}</small>
@@ -146,7 +146,7 @@
 
     <!-- /.row -->
     <hr>
-    <div class="row" style="text-align: -webkit-center;">
+    <div class="row nopadding" style="text-align: -webkit-center;">
         <h5>MERCADO</h5>
     </div>
     <div class="row kpi" style="text-align: -webkit-center;">
